--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
 <h1>Logowanie</h1>
 <hr>
 <form th:action="@{/login}" method="post">
-    <p>Nazwa użytkownika: <input type="text" name="login"/></p>
+    <p>Nazwa użytkownika: <input type="text" name="username"/></p> <!--   czemu tu nie działało z login - tylko z username dziala-->
     <p>Hasło: <input type="password" name="password"/></p>
     <p><input type="submit" value="Zaloguj się"/></p>
 </form>
