--- a/src/main/resources/templates/preview.html
+++ b/src/main/resources/templates/preview.html
@@ -15,6 +15,9 @@
 <body>
 <h1>Podglad na wykresach</h1>
 <hr>
-
+<form id="logoutForm" action="/logout" method="post">
+    <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
+    <button type="submit">Wyloguj</button>
+</form>
 </body>
 </html>
