--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -7,18 +7,19 @@
 </head>
 <body>
 <h1>Lista użytkowników</h1>
+<p><a th:href="@{/preview}" >Wykresy: Użytkownik</a></p>
+<p><a th:href="@{/alarms}" >Alarmy: Użytkownik</a></p>
+<form id="logoutForm" action="/logout" method="post">
+    <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
+    <button type="submit">Wyloguj</button>
+</form>
 <hr>
-<a href="/register/new">Dodaj nowego użytkownika</a>
+<a href="/register">Dodaj nowego użytkownika</a>
 <div sec:authorize="isAuthenticated()">
-    <form id="logoutForm" action="/logout" method="post">
-        <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
-        <button type="submit">Wyloguj</button>
-    </form>
     <table border="3">
         <tr>
             <th>IdAutoUser</th>
             <th>Login</th>
-            <th>Hasło</th>
             <th>Imię</th>
             <th>Nazwisko</th>
             <th>Nr. Pracownika</th>
@@ -30,12 +31,11 @@
         <tr th:each="user : ${listUser}">
             <td th:text="${user.idAutoUser}"></td>
             <td th:text="${user.login}"></td>
-            <td th:text="${user.password}"></td>
             <td th:text="${user.firstName}"></td>
             <td th:text="${user.lastName}"></td>
-            <td th:number="${user.workerNumber}"></td>
+            <td th:text="${user.workerNumber}"></td>
             <td th:text="${user.department}"></td>
-            <td th:tel="${user.phoneNumber}"></td>
+            <td th:text="${user.phoneNumber}"></td>
             <td th:text="${user.roles}"></td>
             <td>
                 <a th:href="@{/users/edit/{id}(id=${user.idAutoUser})}">Edytuj</a>
