--- a/src/main/resources/templates/alarms.html
+++ b/src/main/resources/templates/alarms.html
@@ -2,50 +2,93 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Alarmy</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/styles.css}">
+
 </head>
 <body>
-<h1>Alarmy - wystąpienie anomalii </h1>
-<p><a th:href="@{/users}" >Użytkownicy: Admin</a></p>
-<p><a th:href="@{/preview}" >Wykresy: Użytkownik</a></p>
-<form id="logoutForm" action="/logout" method="post">
-    <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
-    <button type="submit">Wyloguj</button>
-</form>
 
-<hr>
+<div class="Container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand custom-brand" href="/users">Alarmy - wystąpienie anomalii</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/users">Admin: Pracownicy</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/preview">Użytkownik: Wykresy</a>
+                    </li>
+                </ul>
 
-<form th:action="@{/alarms}" th:object="${regdhn}" method="get">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <form th:action="@{/logout}" method="post">
+                            <button type="submit" class="btn btn-dark">Wyloguj</button>
+                        </form>
+                    </li>
 
-        <label for="dataStart">Start Date:</label>
-        <input type="datetime-local" id="dataStart" name="dataStart" required>
-        <br>
-        <label for="dataStop">End Date:</label>
-        <input type="datetime-local" id="dataStop" name="dataStop" required>
-        <br>
-        <button type="submit">Wyszukaj</button>
-</form>
-<hr>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <hr>
 
-<table border="3">
-    <tr>
-        <th>Data wystąpienie</th>
-        <th>Lokalizacja</th>
-        <th>Identyfikator</th>
-        <th>Przyczyna</th>
-    </tr>
-    <tr th:each="regDHNS : ${regDHNS}" method="post">
-        <td th:text="${regDHNS.dataOdczytuReg}"></td>
-        <td th:text="${regDHNS.lokalizacja}"></td>
-        <td th:text="${regDHNS.identyfikator}"></td>
-        <td>Przekroczenie temp. CO > 5</td>
-    </tr>
-</table>
+    <form th:action="@{/alarms}" th:object="${regdhn}" method="get" class="d-flex mb-3">
 
-<hr>
+        <div class="me-3 p-2">
+            <label for="dataStart" class="form-label"><strong>Start Date:</strong></label>
+            <input type="datetime-local" id="dataStart" name="dataStart" class="form-control" required>
+        </div>
+        <div class="me-3 p-2">
+            <label for="dataStop" class="form-label"><strong>End Date:</strong></label>
+            <input type="datetime-local" id="dataStop" name="dataStop" class="form-control" required>
+        </div>
 
+        <button type="submit" class="btn btn-primary align-self-center">Wyszukaj</button>
+    </form>
+    <hr>
 
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th>Data wystąpienie</th>
+            <th>Lokalizacja</th>
+            <th>Identyfikator</th>
+            <th>Przyczyna</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="regDHNS : ${regDHNS}" method="post">
+            <td th:text="${#temporals.format(regDHNS.dataOdczytuReg, 'yyyy-MM-dd HH:mm:ss')}"></td>
+            <td th:text="${regDHNS.lokalizacja}"></td>
+            <td th:text="${regDHNS.identyfikator}"></td>
+            <td>Przekroczenie temp. CO > 5</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 
+<footer id="footer" class="bg-dark text-white text-center py-3">
+    <p>Gdańskie Przedsiębiorstwo Energetyki Cieplnej Sp. z o.o. Słowackiego 159 B, 80-298 Gdańsk</p>
+    <p>All rights reserved. Copyright by GPEC 2017-2024</p>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
