--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,15 +2,37 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Logowanie</title>
+
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/styles.css}">
+
 </head>
 <body>
+
+<div th:if="${param.error}">
+    <div class="alert alert-danger" role="alert">
+        Błędne dane logowania. Spróbuj ponownie.
+    </div>
+</div>
 <h1>Logowanie</h1>
 <hr>
 <form th:action="@{/login}" method="post">
     <p>Nazwa użytkownika: <input type="text" name="username"/></p>
     <p>Hasło: <input type="password" name="password"/></p>
-    <p><input type="submit" value="Zaloguj się"/></p>
+    <p><input type="submit" class="btn btn-primary" value="Zaloguj się"/></p>
 </form>
+
+
+<footer id="footer" class="bg-dark text-white text-center py-3">
+    <p>Gdańskie Przedsiębiorstwo Energetyki Cieplnej Sp. z o.o. Słowackiego 159 B, 80-298 Gdańsk</p>
+    <p>All rights reserved. Copyright by GPEC 2017-2024</p>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
 </body>
 </html>
