--- a/src/main/resources/templates/preview.html
+++ b/src/main/resources/templates/preview.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="pl" lang="pl">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="pl" lang="pl"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Podglad - Wykresy</title>
+
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/styles.css}">
+
     <style type="text/css">
         body {
             background-color: #ffffff;
@@ -10,16 +20,82 @@
             background-attachment: fixed;
             background-position: 50% 50%;
         }
+
+        .center-spinner {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 70vh; /* Adjust as needed */
+        }
+
+        .custom-spinner {
+            width: 10rem; /* Adjust size as needed */
+            height: 10rem; /* Adjust size as needed */
+        }
+
+        .custom-spinner .spinner-border {
+            width: 15rem; /* Adjust size of inner spinner */
+            height: 15rem; /* Adjust size of inner spinner */
+            border-width: 1.5rem; /* Adjust border thickness */
+        }
     </style>
+
+
 </head>
 <body>
-<h1>Podglad na wykresach</h1>
-<p><a th:href="@{/users}" >Użytkownicy: Admin</a></p>
-<p><a th:href="@{/alarms}" >Alarmy: Użytkownik</a></p>
-<form id="logoutForm" action="/logout" method="post">
-    <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
-    <button type="submit">Wyloguj</button>
-</form>
-<hr>
+
+<div class="Container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand custom-brand" href="/users">Alarmy - wystąpienie anomalii</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/users">Admin: Pracownicy</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/alarms">Użytkownik: Alarmy</a>
+                    </li>
+                </ul>
+
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <form th:action="@{/logout}" method="post">
+                            <button type="submit" class="btn btn-dark">Wyloguj</button>
+                        </form>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <hr>
+</div>
+
+<div class="center-spinner">
+    <div class="custom-spinner">
+        <div class="spinner-border text-dark" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+    </div>
+</div>
+
+<footer id="footer" class="bg-dark text-white text-center py-3">
+    <p>Gdańskie Przedsiębiorstwo Energetyki Cieplnej Sp. z o.o. Słowackiego 159 B, 80-298 Gdańsk</p>
+    <p>All rights reserved. Copyright by GPEC 2017-2024</p>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
+
 </body>
 </html>
