--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -3,46 +3,94 @@
       xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>GPECapp</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/styles.css}">
+
 </head>
 <body>
-<h1>Lista użytkowników</h1>
-<p><a th:href="@{/preview}" >Wykresy: Użytkownik</a></p>
-<p><a th:href="@{/alarms}" >Alarmy: Użytkownik</a></p>
-<form id="logoutForm" action="/logout" method="post">
-    <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
-    <button type="submit">Wyloguj</button>
-</form>
-<hr>
-<a href="/register">Dodaj nowego użytkownika</a>
-<div sec:authorize="isAuthenticated()">
-    <table border="3">
-        <tr>
-            <th>IdAutoUser</th>
-            <th>Login</th>
-            <th>Imię</th>
-            <th>Nazwisko</th>
-            <th>Nr. Pracownika</th>
-            <th>Wydział</th>
-            <th>Nr. Tel.</th>
-            <th>Uprawnienia</th>
-            <th>Akcje</th>
-        </tr>
-        <tr th:each="user : ${listUser}">
-            <td th:text="${user.idAutoUser}"></td>
-            <td th:text="${user.login}"></td>
-            <td th:text="${user.firstName}"></td>
-            <td th:text="${user.lastName}"></td>
-            <td th:text="${user.workerNumber}"></td>
-            <td th:text="${user.department}"></td>
-            <td th:text="${user.phoneNumber}"></td>
-            <td th:text="${user.roles}"></td>
-            <td>
-                <a th:href="@{/users/edit/{id}(id=${user.idAutoUser})}">Edytuj</a>
-                <a th:href="@{/users/delete/{id}(id=${user.idAutoUser})}">Usuń</a>
-            </td>
-        </tr>
-    </table>
+<div class="Container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand custom-brand" href="/users">Lista użytkowników</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/alarms">Użytkownik: Alarmy</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/preview">Użytkownik: Wykresy</a>
+                    </li>
+                </ul>
+
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <form th:action="@{/logout}" method="post">
+                            <button type="submit" class="btn btn-dark">Wyloguj</button>
+                        </form>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <hr>
+    <a class="btn btn-primary" href="/register">Dodaj nowego użytkownika</a>
+    <p></p>
+    <hr>
+    <div sec:authorize="isAuthenticated()">
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th class="text-center">IdAutoUser</th>
+                <th>Login</th>
+                <th>Imię</th>
+                <th>Nazwisko</th>
+                <th>Nr. Pracownika</th>
+                <th>Wydział</th>
+                <th>Nr. Tel.</th>
+                <th>Uprawnienia</th>
+                <th>Akcje</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="user : ${listUser}">
+                <td th:text="${user.idAutoUser}" class="text-center"></td>
+                <td th:text="${user.login}"></td>
+                <td th:text="${user.firstName}"></td>
+                <td th:text="${user.lastName}"></td>
+                <td th:text="${user.workerNumber}"></td>
+                <td th:text="${user.department}"></td>
+                <td th:text="${user.phoneNumber}"></td>
+                <td th:text="${user.roles}"></td>
+                <td>
+                    <a th:href="@{/users/edit/{id}(id=${user.idAutoUser})}" class="btn btn-primary btn-sm">Edytuj</a>
+                    <a th:href="@{/users/delete/{id}(id=${user.idAutoUser})}"class="btn btn-danger btn-sm">Usuń</a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
+
+
+<footer id="footer" class="bg-dark text-white text-center py-3">
+    <p>Gdańskie Przedsiębiorstwo Energetyki Cieplnej Sp. z o.o. Słowackiego 159 B, 80-298 Gdańsk</p>
+    <p>All rights reserved. Copyright by GPEC 2017-2024</p>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
 </body>
 </html>
